--- a/code/app/src/main/res/layout/fragment_planning_shops_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shops_table.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/smobItemsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:stateFlowResource="@{viewModel.smobShopList}"
+                app:stateFlowResource="@{viewModel.smobShopListSF}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +51,7 @@
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:fadeVisibleOnLoading="@{viewModel.smobShopList}"
+                app:fadeVisibleOnLoading="@{viewModel.smobShopListSF}"
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
