renaming in preparation of viewModel refacturing

--- a/code/app/src/main/res/layout/fragment_planning_products_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_products_table.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/smobItemsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:stateFlow="@{viewModel.smobListItemsWithStatusSF}"
+                app:stateFlow="@{viewModel.smobListProductsWithListDataSF}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                app:fadeVisibleOnLoading="@{viewModel.smobListItemsSF}"
+                app:fadeVisibleOnLoading="@{viewModel.smobListProductsSF}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
