--- a/code/app/src/main/res/layout/fragment_planning_lists_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists_table.xml
@@ -29,7 +29,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:stateFlowResource="@{viewModel.smobListsStaticSF}" />
+                app:stateFlowResource="@{viewModel.smobListsSF}" />
 
             <TextView
                 android:id="@+id/noGroupsHint1"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                app:fadeVisibleOnLoading="@{viewModel.smobListsStaticSF}"
+                app:fadeVisibleOnLoading="@{viewModel.smobListsSF}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
