--- a/code/app/src/main/res/layout/fragment_admin_contacts_import_table.xml
+++ b/code/app/src/main/res/layout/fragment_admin_contacts_import_table.xml
@@ -40,7 +40,7 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constrainedHeight="true"
                 app:layout_constraintTop_toBottomOf="@id/smobContactsImportSearch"
-                app:liveData="@{viewModel.contactsLiveData}" />
+                app:liveData="@{viewModel.contactsLD}" />
 
             <TextView
                 android:id="@+id/noDataTextView"
