flattened composable hierarchy, NavGraphBuilder as config, NavHostController at Scaffold level, Title management fixed

--- a/code/app/src/main/res/layout/fragment_planning_lists_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists_table.xml
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_normal"
                 android:src="@drawable/ic_add"
-                android:contentDescription="@string/add_smob_item"
+                android:contentDescription="@string/add_smob_item_name"
                 app:fabSize="normal"
                 app:layout_anchor="@id/smobItemsRecyclerView"
                 app:layout_anchorGravity="bottom|right|end"
