Integrated ShopMob Shops listing as bottom bar navigation target

--- a/code/app/src/main/res/layout/fragment_planning_shops_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shops_table.xml
@@ -14,7 +14,7 @@
         android:id="@+id/rlPlanningShopList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="com.tanfra.shopmob.features.smobPlanning.presentation.view.shops.PlanningShopsTableFragment">
+        tools:context="com.tanfra.shopmob.features.smobPlanning.presentation.view.shops.obsoleteRemove.PlanningShopsTableFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
